--- a/src/templates/post/index.html.twig
+++ b/src/templates/post/index.html.twig
@@ -3,103 +3,79 @@
 {% block body %}
     <link href="{{ asset('assets/css/post.css') }}" rel="stylesheet"/>
     <h1>Liste des annonces</h1>
-        {# {% for post in posts %}
-            <div class="col-3 m-3 p-3">
-                <div class="card">
-                    <a href="{{ path('app_post_show', {'id': post.id}) }}">
-                    <div id="carouselControls" class="carousel-index" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            {% for image in post.images %}
-                                <div class="carousel-item active hauteur">
-                                    <img class="card-img-top" src={{image}} alt="Photo">
-                                </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-            </div>
-        {% endfor %} #}
-
-    <h1>Post index</h1>
-    {{ form(form_search)}}
-{#</div> 
+{{ form(form_search)}}
 
 {% for fail in app.flashes('failed') %}
     {{ fail }}
 {% endfor %}
 {% for bravo in app.flashes('success') %}
     {{ bravo }}
-{% endfor %}#}
+{% endfor %}
 
 
 
-{# <div>
+<div>
     {% for post in allDataToShow %}
         <div class="col-3 m-3 p-3">
-                <div class="card">
-                    <a href="{{ path('app_post_show', {'id': post.id}) }}">
-                        {% for image in post.images %}
-                        <img class="card-img-top" src={{image}} alt="Photo">
-                        {% endfor %}
-                        <div class="card-body d-flex flex-column">
-                            <h5 class="card-title">{{ post.name }}</h5>
-                            <p class="card-text">Adresse.</p>
-                            <span class="align-self-end">{{ post.price }}€</span>
-                        </div>
-                    </a>
-                </div>
-                <span class="date">Date de publication : {{ post.date ? post.date|date('d/m/Y') : '' }}</span>
-        </div>      
-        {% else %}
-            <span>Aucune annonce n'a été trouvée</span>
-    {% endfor %}
-</div> #}
-
-            <div class="row justify-content-around">
-                {% for post in posts %}
-                    <div class="col-3 m-3 p-3"> 
-                        <div class="card">
-                            {# <a href="{{ path('app_post_show', {'id': post.id}) }}">
-                                {% for image in post.images %}
+            <div class="card">
+                <a href="{{ path('app_post_show', {'id': post.id}) }}">
+                    <div id="carouselControls" class="carousel-index" data-bs-ride="false" data-bs-interval="false">
+                        <div class="carousel-inner">
+                            {% for image in post.images %}
+                            <div class="carousel-item active hauteur">
                                 <img class="card-img-top" src={{image}} alt="Photo">
-                                {% endfor %}
-                                <div class="card-body d-flex flex-column">
-                                    <h5 class="card-title">{{ post.name }}</h5>
-                                    <p class="card-text">Adresse.</p>
-                                    <p class="card-text">{{ post.category }}</p>
-                                    <span class="align-self-end">{{ post.price }}€</span>
-                                </div> #}
-                                {#  #}
-                                <a href="{{ path('app_post_show', {'id': post.id}) }}">
-                                    <div id="carouselControls" class="carousel-index" data-bs-ride="carousel">
-                                        <div class="carousel-inner">
-                                            {% for image in post.images %}
-                                                <div class="carousel-item active hauteur">
-                                                    <img class="card-img-top" src={{image}} alt="Photo">
-                                                </div>
-                                            {% endfor %}
-                                        </div>
-                                    </div>
-                                    <div class="card-body d-flex flex-column">
-                                        <h5 class="card-title">{{ post.name }}</h5>
-                                        {# <p class="card-text">Adresse.</p> #}
-                                        <p class="card-text">{{ post.category }}</p>
-                                        <span class="align-self-end">{{ post.price }}€</span>
-                                    </div>
-                                </a>
+                            </div>
+                            {% endfor %}
                         </div>
-                        <span class="date">Date de publication : {{ post.date ? post.date|date('d/m/Y') : '' }}</span>
                     </div>
-                    {% else %}
-                        <span>Aucune annonce n'a été trouvée</span>
-                {% endfor %}
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">{{ post.name }}</h5>
+                        <p class="card-text">{{ post.category }}</p>
+                        <span class="align-self-end">{{ post.price }}€</span>
+                    </div>
+                </a>
             </div>
-{# </div>
+            <span class="date">Date de publication : {{ post.date ? post.date|date('d/m/Y') : '' }}</span>
+        </div> 
+    {% else %}
+        <span>Aucune annonce n'a été trouvée</span>
 
-<div class="row d-flex justify-content-end">
-    <div class="col-auto">
-        <a href="{{ path('app_post_new') }}" class="btn btn-outline-primary">Ajouter une annonce</a>
+
+        <div class="row justify-content-around">
+            {% for post in posts %}
+                <div class="col-3 m-3 p-3">
+                    <div class="card">
+                        <a href="{{ path('app_post_show', {'id': post.id}) }}">
+                            <div id="carouselControls" class="carousel-index" data-bs-ride="false" data-bs-interval="false">
+                                <div class="carousel-inner">
+                                    {% for image in post.images %}
+                                    <div class="carousel-item active hauteur">
+                                        <img class="card-img-top" src={{image}} alt="Photo">
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="card-title">{{ post.name }}</h5>
+                                <p class="card-text">{{ post.category }}</p>
+                                <span class="align-self-end">{{ post.price }}€</span>
+                            </div>
+                        </a>
+                    </div>
+                    <span class="date">Date de publication : {{ post.date ? post.date|date('d/m/Y') : '' }}</span>
+                </div>
+                {% else %}
+                    <span>Aucune annonce n'a été trouvée</span>
+                {% endfor %}
+            {# </div> #}
+            {% endfor %}
+        </div>
+</div>
+
+    <div class="row d-flex justify-content-end">
+        <div class="col-auto">
+            <a href="{{ path('app_post_new') }}" class="btn btn-outline-primary">Ajouter une annonce</a>
+        </div>
     </div>
-</div>#}
-<script src="{{ asset('assets/js/post.js') }}"></script>
+
 {% endblock %}
